--- a/_css/estilo_dos_ids_pg_principal.css
+++ b/_css/estilo_dos_ids_pg_principal.css
@@ -10,9 +10,22 @@
 
 #alfabeto{
 		list-style-type:none;
+		font-size: 18px;
+		font-family:"baskerville old face";
+		
 	}
 
 #contem_alfabeto ul li {
 	display:inline;
 	
 }
+#historia {
+	background-color: grey;
+	width: 50%;
+	padding:15px;
+	position: relative;
+	top: 80px;
+	left:20px;
+}
+
+
