--- a/_css/estilo_pagina_principal.css
+++ b/_css/estilo_pagina_principal.css
@@ -2,10 +2,12 @@ header { background-color:#2d81bd;
 		padding-bottom:3%;
 		padding-top:1%;
 		margin:0px;
-		background-image:url("_imagens/wallpaper-azul.jpg");
+		background-image:url("file:///C:/Users/teste/Desktop/Projetos%20para%20o%20git/Dicionario_das_tags/_imagens/wallpaper-azul.jpg");
+		background-repeat: no-repeat;
+		background-size: 100%;
 		
-
-}	
+				
+}		
 
 a:hover {
 	color:#9c244c;
@@ -34,3 +36,14 @@ ul {
 	letter-spacing:15px;
 }
 
+footer {
+	background-color: #eb9138;
+	padding: 10px;
+	position: relative;
+	top: 300px;
+
+}
+
+body {
+	background-color: #ddede9;
+}
