--- a/_css/estilo_das_classes_pg_principal.css
+++ b/_css/estilo_das_classes_pg_principal.css
@@ -5,3 +5,18 @@
 .alph {
     border-style: solid;
 }
+
+.texto_do_body {
+    
+	text-align: justify;
+	text-indent: 7px;
+	line-height:40px;
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 20px;
+	background-color:#f7f7ff;
+    width: 50%;
+    border-radius:20px;
+	box-shadow:
+	 3px 0px 8px #e1e1f0;
+	
+}
