--- a/_css/estilo_dos_ids_pg_principal.css
+++ b/_css/estilo_dos_ids_pg_principal.css
@@ -19,13 +19,25 @@
 	display:inline;
 	
 }
-#historia {
-	background-color: grey;
-	width: 50%;
+
+#histora_html {
 	padding:15px;
 	position: relative;
 	top: 80px;
 	left:20px;
+	
 }
-
-
+#surgimento_html {
+	padding:15px;
+	position: relative;
+	top: 110px;
+	left:20px;
+	
+}
+#o_que_e_html {
+	padding:15px;
+	position: relative;
+	top: 150px;
+	left:20px;
+	
+}
