--- a/_css/estilo_texto.css
+++ b/_css/estilo_texto.css
@@ -1,13 +1,3 @@
-#local_logo {
-	margin:1px;
-}
-
-#logo{
-	width:150px;
-	position:relative;
-	left:22%;
-}
-
 #alfabeto{
 		list-style-type:none;
 		font-size: 18px;
@@ -24,20 +14,39 @@
 	padding:15px;
 	position: relative;
 	top: 80px;
-	left:20px;
+	left:40px;
 	
 }
 #surgimento_html {
 	padding:15px;
 	position: relative;
 	top: 110px;
-	left:20px;
+	left:40px;
 	
 }
 #o_que_e_html {
 	padding:15px;
 	position: relative;
 	top: 150px;
-	left:20px;
+	left:40px;
+	
+}
+#contem_alfabeto {
+	position: relative;
+	top:-60px;
+}
+
+.texto_do_body {
+    
+	text-align: justify;
+	text-indent: 7px;
+	line-height:40px;
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 20px;
+	background-color:#f7f7ff;
+    width: 80%;
+    border-radius:20px;
+	box-shadow:
+	 3px 0px 8px #e1e1f0;
 	
 }
