--- a/_css/estilo_imagens.css
+++ b/_css/estilo_imagens.css
@@ -1,11 +1,20 @@
-#local_logo {
-	padding: 0;
-	margin: 0;
-	
+/*.icone-pesquisa {
+	display:table;
 }
-#logo {
-	position: absolute;
-	left:18%;
-	top:-4%;
-	
+.icone-pesquisa .busca1 {
+	border-right:0;
+	padding: 1rem;
 }
+.icone-pesquisa-texto {
+	background:#F2F2F2;
+	border: 1px solid #DCDCDC;
+	box-sizing: border-box;
+	display: table-cell;
+	font-size: 8rem;
+	line-height: 0;
+	padding: 1rem;
+	text-align: center;
+	vertical-align: middle;
+	white-space: nowrap;
+	width: 1%;
+}*/
