--- a/_css/estilo_tags.css
+++ b/_css/estilo_tags.css
@@ -1,11 +1,11 @@
 header { background-color:#2d81bd;
-		padding-bottom:18%;		
-		background-image:url("file:///C:/Users/teste/Desktop/Projetos%20para%20o%20git/Dicionario_das_tags/_imagens/wallpaper-azul.jpg");
+		padding-bottom:19%;	
+		background-image:url("file:///C:/Users/teste/Desktop/Projetos%20para%20o%20git/Dicionario_das_tags/_imagens/logo.png");
 		background-repeat: no-repeat;
-		background-size: 100%;
+		background-size: cover;
 		
 				
-}		
+}	
 
 a:hover {
 	color:#9c244c;
@@ -20,29 +20,20 @@ a {
 	color:#7272f7;
 }
 
-form {
-	position:absolute;
-	left:65%;
-	top:20%;
-	
-	
-}
-
-
 ul {
 	text-align:center;
 	letter-spacing:15px;
 }
 
 footer {
-	background-color: #eb9138;
+	background-color:#5DBCD2;
 	padding: 20px;
 	position: relative;
 	top: 300px;
 
 }
 body {
-	background-color: #e7ebe1;
+	background-color:#EBE8CA;
 }
 h1, h2, h3, h4{
 	color: #6b6b65;
@@ -59,4 +50,47 @@ h1 {
 	border-bottom: solid;
 	border-color: black;
 	border-bottom-width: 1px;	
+}
+
+	/* INPUTS E BOTÕES*/
+#input_pesquisar{
+	height:30px;
+	width: 65%;
+	background-color: white;
+	
+}
+#input_pesquisar:focus {
+	background-color: aliceblue;
+}
+
+form {
+	position:absolute;
+	left:55%;
+	top:20%;
+	width:35%;
+	
+	
+}
+.busca {
+   border-radius: 5px;
+   box-sizing: border-box;
+   border:3px solid black;
+}
+
+#botao_buscar {
+	height:30px;
+	width: 20%;
+	box-shadow: 0 2px 4px black;
+	background-color: rgb(163, 211, 253);
+
+	
+}
+#botao_buscar:hover {
+	background-color: #5DBCD2;
+	
+}
+#botao_buscar:active {
+	box-shadow: none;
+	border: 0px;
+	
 }
