--- a/_css/estilo_tags.css
+++ b/_css/estilo_tags.css
@@ -1,10 +1,14 @@
+
+/* ------------- Header ---------------- */
+
 header { background-color:#2d81bd;
-		background-image:url("file:///C:/Users/teste/Desktop/Projetos%20para%20o%20git/Dicionario_das_tags/_imagens/fundo-header.png");
+		background-image:url("../_imagens/wallpaper-azul.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
-		width: 1327px;
-		height: 255px;
+		width: auto;
+		height: auto;
 		box-sizing: border-box;
+		border-bottom: 2px solid black;
 					
 }	
 #alfabeto{
@@ -39,13 +43,7 @@ ul {
 	letter-spacing:15px;
 }
 
-footer {
-	background-color:#5DBCD2;
-	padding: 20px;
-	position: relative;
-	top: 300px;
 
-}
 body {
 	background-color:#EBE8CA;
 }
@@ -66,7 +64,7 @@ h1 {
 	border-bottom-width: 1px;	
 }
 
-	/* INPUTS E BOTÕES*/
+	/* ----------------- INPUT ------------------- */
 #input_pesquisar{
 	height:30px;
 	width: 65%;
@@ -78,15 +76,14 @@ h1 {
 }
 #input_pesquisar:hover{
 	background-color: #b2eaf5;
-;
+
 }
 
 form {
 	position:absolute;
 	left:55%;
 	top:20%;
-	width:35%;
-		
+	width:35%;	
 	
 }
 .busca {
@@ -95,11 +92,12 @@ form {
    outline: none;
 }
 
+/* --------------------- Botões -------------------------- */
 #botao_buscar {
 	height:30px;
 	width: 80px;
 	box-shadow: 0px 1px 1px black;
-	background-image: url("file:///C:/Users/teste/Desktop/Projetos%20para%20o%20git/Dicionario_das_tags/_imagens/icone_pesquisa3.png");
+	background-image: url("../_imagens/icone_pesquisa3.png");
 	background-repeat: no-repeat;
 	background-size: 22px 22px;
 	background-position:center;
@@ -113,4 +111,13 @@ form {
 	box-shadow: none;
 	border: 0px;
 	
+}
+
+/* -----------------------  Footer -------------------------------- */
+footer {
+	background-color:#5DBCD2;
+	padding: 20px;
+	position: relative;
+	top: 300px;
+
 }
