--- a/_css/estilo_tags.css
+++ b/_css/estilo_tags.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css2?family=Patua+One&display=swap);
 
 /* ------------- Header ---------------- */
 
@@ -5,18 +6,23 @@ header { background-color:#2d81bd;
 		background-image:url("../_imagens/wallpaper-azul.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
-		width: auto;
-		height: auto;
 		box-sizing: border-box;
+		width: auto;
+		height: auto;		
 		border-bottom: 2px solid black;
-					
+		margin-top:-7px;	
+			
 }	
 #alfabeto{
 	list-style-type:none;
-	font-size: 18px;
-	font-family:"baskerville old face";
-	margin-top: 40px;
-		
+	font-size: 22px;
+	font-family: 'Patua One', cursive;
+	margin:15px;
+	position: relative;
+	top:40px;
+	box-sizing: border-box;
+	text-align:center;
+	letter-spacing:15px;
 }
 
 #contem_alfabeto ul li {
@@ -37,12 +43,6 @@ a {
 	text-decoration:none;
 	color:#7272f7;
 }
-
-ul {
-	text-align:center;
-	letter-spacing:15px;
-}
-
 
 body {
 	background-color:#EBE8CA;
@@ -118,6 +118,8 @@ footer {
 	background-color:#5DBCD2;
 	padding: 20px;
 	position: relative;
-	top: 300px;
-
+	top: 300px;	
+	font-family: 'Patua One', cursive;
+	background: rgb(93,188,210);
+background: linear-gradient(90deg, rgba(93,188,210,1) 0%, rgba(187,159,169,1) 54%, rgba(158,136,144,1) 93%);
 }
